# AI_WhiteShorts_Public

./: .gitignore  Makefile  README.md  README_ADDENDUM_PREDICT_DATE.md  README_NIGHTLY_SECTION.md  TEST.py  baseline_elo.py  batch_predict_by_player.py  compute_metrics.py  config.yaml  error.txt  import_predictions.py  import_results.py  predict_any.py  pyproject.toml  requirements.txt  train_compare_season.py  train_flexi_forecast.py  update_history_from_api.py
.github/workflows/: ci.yml  nightly.yml  projections-poll.yml
WhiteShorts_Import_Scripts/: ci_workflow_snippet.yml  import_predictions.py
data/: NHL_HISTORY_UNION.csv  NHL_YTD.csv
data/models/v0.3.2_weighted/: comparison_overall.csv  dss_meta.json  dss_model.pt  dss_per_player.csv  per_player_head_to_head.csv  rf_meta.json  rf_per_player.csv
local/: compute_predict_date.py  predict.bat  run_all.bat  train.bat  update_history.bat
models/v3.3/: comparison_overall.csv  dss_meta.json  dss_model.pt  dss_per_player.csv  per_player_head_to_head.csv  rf_per_player.csv
preds/: missing_2025-OCT-07.csv
src/white_shorts/: __init__.py  featurize.py  io.py  registry.py
src/white_shorts/cli/: batch_predict_by_player.py  import_results.py  predict_any.py  train_compare_season.py  train_flexi_forecast.py  update_history.py
src/white_shorts/etl/: update_history_from_api.py
src/white_shorts/track_metrics/: README.md  baseline_elo.py  compute_metrics.py  dashboard_app.py  ingest_outcome.py  init_db.py  log_prediction.py  schema.sql
src/white_shorts/train/: multivariate_forecast.py  taskspec.py  trainer.py
